--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2046,7 +2046,7 @@ hr{
     content:"";
     width:14px;
     height:1px;
-    background:#00BFFF;
+    background:#d19f68;
     left:25px;
     bottom:33px;
     transform:rotate(-46deg);
@@ -2067,7 +2067,7 @@ hr{
     content:"";
     width:14px;
     height:1px;
-    background:#00BFFF;
+    background:#d19f68;
     left:57px;
     top:37px;
     transform:rotate(-46deg);
@@ -2084,7 +2084,7 @@ hr{
     }
 }
 .header-area .main-header .main-menu ul li.active>a{
-    color:#00BFFF
+    color:#d19f68
 }
 .header-area .main-header .main-menu ul li.active>a::before{
     opacity:1;
@@ -2095,7 +2095,8 @@ hr{
     visibility:visible
 }
 .header-area .main-header .main-menu ul li:hover>a{
-    color:#00BFFF
+    color:#d19f68;
+    text-shadow:0px 0px 5px black;
 }
 .header-area .main-header .main-menu ul li:hover>a::before{
     opacity:1;
