--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Oswald:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600&display=swap");
+::-webkit-scrollbar {
+    width: 7px;
+    background-color: white;
+}
+  
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 5px;
+    background: grey; 
+}
+
 .white-bg{
     background:#ffffff
 }
